Added Dutch translation ( Thanks Maarten )

--- a/src/config.yml
+++ b/src/config.yml
@@ -1,4 +1,4 @@
-# Language, supported en, hu, fr, cz ( send me translations! )
+# Language, supported en, hu, fr, cz, nl ( send me translations! )
 Locale: en
 
 # Check plugin update when server is starting
