Player can lose money when player kill him without cash-transfer option

--- a/src/config.yml
+++ b/src/config.yml
@@ -27,3 +27,7 @@ Hook:
     MobArena:
         Enabled: false
         Config-processing-when-players-in-arena: false
+    MineStatus:
+        Enabled: true
+        Graphs:
+          MOB-KILLS: true
