--- a/src/nl_locale.yml
+++ b/src/nl_locale.yml
@@ -42,6 +42,16 @@ Entities:
          Messages:
             - '{prefix} Je verliest {currency}{money}'
 
+   DONKEY:
+      Reward:
+         Random-message: false
+         Messages:
+            - '{prefix} You killed a donkey, you earned {currency}{money}'
+      Loss:
+         Random-message: false
+         Messages:
+            - '{prefix} You lost {currency}{money}'
+
    HORSE:
       Reward:
          Random-message: false
@@ -51,6 +61,16 @@ Entities:
          Random-message: false
          Messages:
             - '{prefix} Je verliest {currency}{money}'
+
+   LLAMA:
+      Reward:
+         Random-message: false
+         Messages:
+            - '{prefix} You killed a llama, you earned {currency}{money}'
+      Loss:
+         Random-message: false
+         Messages:
+            - '{prefix} You lost {currency}{money}'
 
    RABBIT:
       Reward:
@@ -122,6 +142,16 @@ Entities:
          Messages:
             - '{prefix} Je verliest {currency}{money}'
 
+   ELDER_GUARDIAN:
+      Reward:
+         Random-message: false
+         Messages:
+            - '{prefix} You killed an elder guardian, you earned {currency}{money}'
+      Loss:
+         Random-message: false
+         Messages:
+            - '{prefix} You lost {currency}{money}'
+
    ENDER_DRAGON:
       Reward:
          Random-message: false
@@ -151,6 +181,16 @@ Entities:
          Random-message: false
          Messages:
             - '{prefix} Je verliest {currency}{money}'
+
+   EVOKER:
+      Reward:
+         Random-message: false
+         Messages:
+            - '{prefix} You killed an evoker, you earned {currency}{money}'
+      Loss:
+         Random-message: false
+         Messages:
+            - '{prefix} You lost {currency}{money}'
 
    GHAST:
       Reward:
@@ -182,6 +222,16 @@ Entities:
          Messages:
             - '{prefix} Je verliest {currency}{money}'
 
+   HUSK:
+      Reward:
+         Random-message: false
+         Messages:
+            - '{prefix} You killed a husk, you earned {currency}{money}'
+      Loss:
+         Random-message: false
+         Messages:
+            - '{prefix} You lost {currency}{money}'
+
    IRON_GOLEM:
       Reward:
          Random-message: false
@@ -201,6 +251,16 @@ Entities:
          Random-message: false
          Messages:
             - '{prefix} Je verliest {currency}{money}'
+
+   MULE:
+      Reward:
+         Random-message: false
+         Messages:
+            - '{prefix} You killed a mule, you earned {currency}{money}'
+      Loss:
+         Random-message: false
+         Messages:
+            - '{prefix} You lost {currency}{money}'
 
    MUSHROOM_COW:
       Reward:
@@ -241,6 +301,16 @@ Entities:
          Random-message: false
          Messages:
             - '{prefix} Je verliest {currency}{money}'
+
+   SKELETON_HORSE:
+      Reward:
+         Random-message: false
+         Messages:
+            - '{prefix} You killed a skeleton horse, you earned {currency}{money}'
+      Loss:
+         Random-message: false
+         Messages:
+            - '{prefix} You lost {currency}{money}'
 
    SHULKER:
       Reward:
@@ -302,6 +372,16 @@ Entities:
          Messages:
             - '{prefix} Je verliest {currency}{money}'
 
+   STRAY:
+      Reward:
+         Random-message: false
+         Messages:
+            - '{prefix} You killed a stray, you earned {currency}{money}'
+      Loss:
+         Random-message: false
+         Messages:
+            - '{prefix} You lost {currency}{money}'
+
    SQUID:
       Reward:
          Random-message: false
@@ -312,6 +392,16 @@ Entities:
          Messages:
             - '{prefix} Je verliest {currency}{money}'
 
+   VEX:
+      Reward:
+         Random-message: false
+         Messages:
+            - '{prefix} You killed a vex, you earned {currency}{money}'
+      Loss:
+         Random-message: false
+         Messages:
+            - '{prefix} You lost {currency}{money}'
+
    VILLAGER:
       Reward:
          Random-message: false
@@ -321,6 +411,16 @@ Entities:
          Random-message: false
          Messages:
             - '{prefix} Je verliest {currency}{money}'
+
+   VINDICATOR:
+      Reward:
+         Random-message: false
+         Messages:
+            - '{prefix} You killed a vindicator, you earned {currency}{money}'
+      Loss:
+         Random-message: false
+         Messages:
+            - '{prefix} You lost {currency}{money}'
 
    WITCH:
       Reward:
@@ -342,6 +442,16 @@ Entities:
          Messages:
             - '{prefix} Je verliest {currency}{money}'
 
+   WITHER_SKELETON:
+      Reward:
+         Random-message: false
+         Messages:
+            - '{prefix} You killed a wither skeleton, you earned {currency}{money}'
+      Loss:
+         Random-message: false
+         Messages:
+            - '{prefix} You lost {currency}{money}'
+
    ZOMBIE:
       Reward:
          Random-message: false
@@ -351,3 +461,23 @@ Entities:
          Random-message: false
          Messages:
             - '{prefix} Je verliest {currency}{money}'
+
+   ZOMBIE_HORSE:
+      Reward:
+         Random-message: false
+         Messages:
+            - '{prefix} You killed a zombie horse, you earned {currency}{money}'
+      Loss:
+         Random-message: false
+         Messages:
+            - '{prefix} You lost {currency}{money}'
+
+   ZOMBIE_VILLAGER:
+      Reward:
+         Random-message: false
+         Messages:
+            - '{prefix} You killed a zombie villager, you earned {currency}{money}'
+      Loss:
+         Random-message: false
+         Messages:
+            - '{prefix} You lost {currency}{money}'
