--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,7 +1,7 @@
 name: KillerMoney
 main: net.diecode.KillerMoney.KillerMoney
-version: 3.21
-softdepend: [Vault, MobArena, MineStatus-Universal]
+version: 3.3
+softdepend: [Vault, MobArena, MineChart]
 author: diecode
 website: http://dev.bukkit.org/bukkit-plugins/killermoney/
 
