--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,18 +1,6 @@
 name: KillerMoney
-main: net.diecode.KillerMoney.KillerMoney
-version: 3.4
+main: net.diecode.KillerMoney.BukkitMain
+version: 4.0.0
 softdepend: [Vault, MobArena, MineChart]
 author: diecode
 website: http://dev.bukkit.org/bukkit-plugins/killermoney/
-
-commands:
-    killermoney:
-        description: "This is the main command of KillerMoney"
-        usage: "Please type /<command> help"
-        aliases: [km]
-        default: true
-
-permissions:
-    killermoney.admin:
-        description: Reload KillerMoney's configurations and locale files
-        default: op
