Better multiplier permission setup

--- a/src/resources/config.yml
+++ b/src/resources/config.yml
@@ -3,21 +3,30 @@ Global-settings:
     Money:
         Decimal-places: 2
         Item-drop:
-            Enabled: true
-            Item-name: "${amount}"
+            Enabled: false
+            Item-name: "&c${amount}"
             Item-material: GOLD_INGOT
     Farming:
         Disable-spawner-farming: true
         Disable-spawner-egg-farming: true
     General:
         Message-method: CHAT
-        Allowed-gamemodes: SURVIVAL, CREATIVE
+        Allowed-gamemodes: SURVIVAL
     Limit:
         Reset-time: 24
         Reached-limit-message: true
+Configurable-permissions:
+    Money-multipliers:
+        donator: 1.5
+        vip: 2
+        elite: 2.5
+    Limit-multipliers:
+        donator: 1.5
+        vip: 2
+        elite: 2.5
 Hook:
     MobArena:
-        Enabled: true
+        Enabled: false
     MineChart:
         Enabled: true
         Graphs:
