Improved mobarena support

--- a/src/resources/config.yml
+++ b/src/resources/config.yml
@@ -27,6 +27,7 @@ Configurable-permissions:
 Hook:
     MobArena:
         Enabled: false
+        Disable-rewards-in-arena: true
     MineChart:
         Enabled: true
         Graphs:
