Added doc links into configs

--- a/src/resources/config.yml
+++ b/src/resources/config.yml
@@ -1,3 +1,5 @@
+# Please check documentation at https://github.com/diecode/KillerMoney/blob/master/docs/Config.md
+
 Check-update: true
 Global-settings:
     Money:
