--- a/src/resources/config.yml
+++ b/src/resources/config.yml
@@ -1,4 +1,6 @@
 # Please check documentation at https://github.com/diecode/KillerMoney/blob/master/docs/Config.md
+# Do not modify this
+Config-version: 1
 
 Check-update: true
 Global-settings:
