- (Added) Player config file for future updates - (Modification) Admin commands -> /kmadmin, players command -> /km - (Modification) Changed few string id in language file

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -10,3 +10,8 @@ commands:
         usage: "Please type /<command> help"
         aliases: [killermoney]
         default: true
+    kmadmin:
+        description: "This is the admin command of KillerMoney"
+        usage: "Please usable /<command> help"
+        aliases: [killermoneyadmin, kma]
+        default: true
