--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,7 +1,7 @@
 name: KillerMoney
 main: net.diecode.killermoney.BukkitMain
 version: 4.2.0
-softdepend: [Vault, MobArena, MineChart, Multiverse-Core]
+softdepend: [Vault, MobArena, Multiverse-Core]
 author: diecode
 website: http://dev.bukkit.org/bukkit-plugins/killermoney/
 commands:
